[package]
authors = ["quentin chavigny turbe <quentin.chavignyturbe@st.com>"]
edition = "2021"
readme = "README.md"
name = "embassy_i2c"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"

panic-halt = "0.2.0"

embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
heapless = { version = "0.8", default-features = false }
defmt = "0.3"
defmt-rtt = "0.4"
embassy-futures = "0.1.0"
embedded-io = "0.6.0" 
embedded-io-async = "0.6.1" 
vl53l8cx = {path = "../../"}

[dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"] 


[dependencies.embassy-executor]
version = "0.6.0" 
features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]

[dependencies.embassy-time]
version = "0.3.2" 
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]

[dependencies.embassy-stm32]
version = "0.1.0" 
features = ["stm32f401re", "exti", "time-driver-any", "chrono", "unstable-pac", "memory-x"]

[[bin]]
name = "embassy_i2c"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# All macro below are used to configure the sensor output. User can define some # macros if he wants to disable selected output, in order to reduce I2C access.
[features]
VL53L8CX_DISABLE_AMBIENT_PER_SPAD = []
VL53L8CX_DISABLE_NB_SPADS_ENABLED = []
VL53L8CX_DISABLE_NB_TARGET_DETECTED = []
VL53L8CX_DISABLE_SIGNAL_PER_SPAD = []
VL53L8CX_DISABLE_RANGE_SIGMA_MM = []
VL53L8CX_DISABLE_DISTANCE_MM = []
VL53L8CX_DISABLE_REFLECTANCE_PERCENT = []
VL53L8CX_DISABLE_TARGET_STATUS = []
VL53L8CX_DISABLE_MOTION_INDICATOR = []